3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Fix Windows compilation after Andreas's changes.
include/win32.h: define WIFEXITED and WEXITSTATUS.
Ryo 2005-12-11

Fix buffer overflows which can be triggered remotely.
--
common/porting.c: Re-implement open_and_uncompress(). The new implementation
   should not contain any buffer overflows anymore. It also fixes possible
   exploits due to funny characters in file names.
plugins/cfpython/cfpython.c: Use snprintf() to truncate long strings.
server/login.c: Reject invalid user names.
socket/loop.c: Make overflow detection work while reading from socket.
   Properly re-allocate memory for listen command. Fix buffer overflow for too
   long command names.
Andreas Kirschbaum 2005-12-11

lib/collect.pl.in: General cleanup - just whitespace changes.
Andreas Kirschbaum 2005-12-11

Prevent the map loader from crashing when loading maps with incorrect headers.
Changes are based on patch #1275563 by Kevin Rudat.
--
common/map.c: Do not dereference NULL value for map headers without parameter.
Andreas Kirschbaum 2005-12-11

Apply modified second part of patch #1275563 (Crossedit: fix map attributes
window) by Kevin Rudat: let crossedit save/load tiling paths as the mapmaker
entered them, rather than saving the normalized version.
--
common/map.c: Delay path normalization from map loading time
   (load_map_header()) to access time (load_and_link_tiled_map()) if running
   as editor.
Andreas Kirschbaum 2005-12-11

server/move.c: In move_ob() print error message instead of crashing: check
   passed arguments before accessing them.
common/object.c, server/{pets.c,player.c,spell_attack.c,time.c},