@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+Moved natural dragon skin resistances from "statistics" to "resistances".
+ server/c_misc.c
+Ryo 2005-12-13
+
 Fix Windows compilation after Andreas's changes.
 include/win32.h: define WIFEXITED and WEXITSTATUS.
 Ryo 2005-12-11
